cabal-version:       >=1.10
name:                ListsToIpTables
version:             0.1.0.0
synopsis:            Download IP lists and transform them to IP sets
license:             GPL-3
license-file:        LICENSE
author:              Stefanos Nikolaou,
                     Ioannis Koutras
maintainer:          ioannis.koutras@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

executable ListsToIpTables
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13,
                       bytestring,
                       HTTP,
                       iproute,
                       network-uri,
                       typed-process,
                       zlib
  default-language:    Haskell2010
  ghc-options:         -threaded
